# CmakeGithubAction

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Config.hpp.in  main.cpp
